--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="email" name="email" placeholder="Email"><br>
             
             <div class="container-check">
-                <label>Est-ce que vous pensez que c'est important de pouvoir boire en cours ?</label><br>
+                <label>Pensez-vous que c'est important de pouvoir boire en cours ?</label><br>
                 <input class="check" type="radio" name="boire_en_cours" value="oui"> Oui<br>
                 <input class="check" type="radio" name="boire_en_cours" value="non"> Non<br>
             </div>
