--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             </div>
             <div class="container-check">
                 <label>Pensez-vous que le cours est intéressant ?</label><br>
-                <input class="check" type="radio" name="boire_en_cours" value="oui"> Oui<br>
-                <input class="check" type="radio" name="boire_en_cours" value="non"> Non<br>
+                <input class="check" type="radio" name="cours_interessant" value="oui"> Oui<br>
+                <input class="check" type="radio" name="cours_interessant" value="non"> Non<br>
             </div>
             <div class="container-check">
                 <label>Pensez-vous que la charge de travail est appropriée ?</label><br>
-                <input class="check" type="radio" name="boire_en_cours" value="oui"> Oui<br>
-                <input class="check" type="radio" name="boire_en_cours" value="non"> Non<br>
+                <input class="check" type="radio" name="charge_travail" value="oui"> Oui<br>
+                <input class="check" type="radio" name="charge_travail" value="non"> Non<br>
             </div>
             <div class="container-check">
                 <label>Pensez-vous que le matériel informatique est en bon état ?</label><br>
-                <input class="check" type="radio" name="boire_en_cours" value="oui"> Oui<br>
-                <input class="check" type="radio" name="boire_en_cours" value="non"> Non<br>
+                <input class="check" type="radio" name="materiel_bon_etat" value="oui"> Oui<br>
+                <input class="check" type="radio" name="materiel_bon_etat" value="non"> Non<br>
             </div>
 
             <textarea name="commentaires" placeholder="Vos retours..." rows="4"></textarea>
