reformuler pour pas blesser la madame

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input class="check" type="radio" name="boire_en_cours" value="non"> Non<br>
             </div>
             <div class="container-check">
-                <label>Pensez-vous que le cours est intéressant ?</label><br>
+                <label>Êtes-vous intéressés par les sujets abordés en classe ?</label><br>
                 <input class="check" type="radio" name="cours_interessant" value="oui"> Oui<br>
                 <input class="check" type="radio" name="cours_interessant" value="non"> Non<br>
             </div>
